Parser.output
Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 global_list

    3 global_list: global_element
    4            | global_list global_element

    5 global_element: function_decl
    6               | declaration_stmt

    7 statement_list: statement
    8               | statement_list statement

    9 statement: declaration_stmt
   10          | assignment_stmt
   11          | expression SEMICOLON
   12          | if_stmt
   13          | while_stmt
   14          | for_stmt
   15          | switch_stmt
   16          | function_decl
   17          | do_while_stmt
   18          | return_stmt
   19          | break_stmt
   20          | block

   21 break_stmt: BREAK SEMICOLON

   22 $@2: /* empty */

   23 block: LBRACE $@2 statement_list RBRACE

   24 declaration_stmt: type IDENTIFIER SEMICOLON
   25                 | CONST type IDENTIFIER ASSIGN expression SEMICOLON
   26                 | type IDENTIFIER ASSIGN expression SEMICOLON
   27                 | BOOL_TYPE IDENTIFIER SEMICOLON
   28                 | BOOL_TYPE IDENTIFIER ASSIGN bool_expression SEMICOLON
   29                 | type error SEMICOLON
   30                 | CONST type error SEMICOLON

   31 bool_expression: TRUE_COND
   32                | FALSE_COND
   33                | LPAREN condition RPAREN

   34 type: INT
   35     | FLOAT_TYPE
   36     | STRING_TYPE
   37     | CHAR_TYPE

   38 assignment_stmt: IDENTIFIER ASSIGN expression SEMICOLON
   39                | error ASSIGN expression SEMICOLON
   40                | IDENTIFIER ASSIGN error SEMICOLON

   41 assign: IDENTIFIER ASSIGN expression

   42 expression: expression PLUS T
   43           | expression MINUS T
   44           | T

   45 T: T MULTIPLY F
   46  | T DIVIDE F
   47  | T MODULO F
   48  | F

   49 F: LPAREN condition RPAREN
   50  | MINUS F
   51  | IDENTIFIER
   52  | IDENTIFIER LPAREN argument_list RPAREN
   53  | IDENTIFIER LPAREN RPAREN
   54  | FLOAT
   55  | NUMBER
   56  | TRUE_COND
   57  | FALSE_COND

   58 condition: expression EQUAL expression
   59          | expression NOT_EQUAL expression
   60          | expression LESS_THAN expression
   61          | expression GREATER_THAN expression
   62          | expression LESS_EQUAL expression
   63          | expression GREATER_EQUAL expression
   64          | expression AND expression
   65          | expression OR expression
   66          | NOT expression
   67          | expression

   68 if_stmt: IF LPAREN condition RPAREN if_block
   69        | IF LPAREN condition RPAREN if_block ELSE else_block

   70 $@3: /* empty */

   71 $@4: /* empty */

   72 if_block: LBRACE $@3 statement_list $@4 RBRACE

   73 $@5: /* empty */

   74 $@6: /* empty */

   75 else_block: LBRACE $@5 statement_list $@6 RBRACE

   76 $@7: /* empty */

   77 $@8: /* empty */

   78 $@9: /* empty */

   79 while_stmt: WHILE LPAREN condition RPAREN $@7 LBRACE $@8 statement_list $@9 RBRACE

   80 $@10: /* empty */

   81 $@11: /* empty */

   82 for_stmt: FOR $@10 LPAREN declaration_stmt condition SEMICOLON assign RPAREN $@11 LBRACE statement_list RBRACE

   83 $@12: /* empty */

   84 switch_stmt: SWITCH LPAREN IDENTIFIER RPAREN $@12 LBRACE case_list switch_optional_default RBRACE
   85            | SWITCH error RPAREN LBRACE case_list RBRACE

   86 switch_optional_default: default_case
   87                        | /* empty */

   88 case_list: case_stmt
   89          | case_list case_stmt

   90 case_stmt: CASE expression COLON statement_list

   91 default_case: DEFAULT COLON statement_list

   92 function_decl: function_name LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
   93              | function_name LPAREN RPAREN LBRACE statement_list RBRACE
   94              | function_name_void LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
   95              | function_name_void LPAREN RPAREN LBRACE statement_list RBRACE

   96 function_name: type IDENTIFIER

   97 function_name_void: VOID_TYPE IDENTIFIER

   98 parameter_list: parameter
   99               | parameter_list COMMA parameter

  100 parameter: type IDENTIFIER

  101 return_stmt: RETURN expression SEMICOLON
  102            | RETURN SEMICOLON

  103 $@13: /* empty */

  104 $@14: /* empty */

  105 $@15: /* empty */

  106 $@16: /* empty */

  107 do_while_stmt: DO $@13 LBRACE $@14 statement_list $@15 RBRACE $@16 WHILE LPAREN condition RPAREN SEMICOLON

  108 argument_list: expression
  109              | argument_list COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256) 29 30 39 40 85
INT (258) 34
FLOAT_TYPE (259) 35
STRING_TYPE (260) 36
CHAR_TYPE (261) 37
CONST (262) 25 30
BOOL_TYPE (263) 27 28
IF (264) 68 69
ELSE (265) 69
WHILE (266) 79 107
FOR (267) 82
DO (268) 107
SWITCH (269) 84 85
CASE (270) 90
DEFAULT (271) 91
BREAK (272) 21
RETURN (273) 101 102
VOID_TYPE (274) 97
TRUE_COND (275) 31 56
FALSE_COND (276) 32 57
PLUS (277) 42
MINUS (278) 43 50
MULTIPLY (279) 45
DIVIDE (280) 46
MODULO (281) 47
ASSIGN (282) 25 26 28 38 39 40 41
EQUAL (283) 58
NOT_EQUAL (284) 59
LESS_THAN (285) 60
GREATER_THAN (286) 61
LESS_EQUAL (287) 62
GREATER_EQUAL (288) 63
AND (289) 64
OR (290) 65
NOT (291) 66
LPAREN (292) 33 49 52 53 68 69 79 82 84 92 93 94 95 107
RPAREN (293) 33 49 52 53 68 69 79 82 84 85 92 93 94 95 107
LBRACE (294) 23 72 75 79 82 84 85 92 93 94 95 107
RBRACE (295) 23 72 75 79 82 84 85 92 93 94 95 107
SEMICOLON (296) 11 21 24 25 26 27 28 29 30 38 39 40 82 101 102 107
COMMA (297) 99 109
COLON (298) 90 91
IDENTIFIER (299) 24 25 26 27 28 38 40 41 51 52 53 84 96 97 100
NUMBER (300) 55
FLOAT (301) 54


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 2, on right: 0
$@1 (49)
    on left: 1, on right: 2
global_list (50)
    on left: 3 4, on right: 2 4
global_element (51)
    on left: 5 6, on right: 3 4
statement_list (52)
    on left: 7 8, on right: 8 23 72 75 79 82 90 91 92 93 94 95 107
statement (53)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20, on right: 7 8
break_stmt (54)
    on left: 21, on right: 19
block (55)
    on left: 23, on right: 20
$@2 (56)
    on left: 22, on right: 23
declaration_stmt (57)
    on left: 24 25 26 27 28 29 30, on right: 6 9 82
bool_expression (58)
    on left: 31 32 33, on right: 28
type (59)
    on left: 34 35 36 37, on right: 24 25 26 29 30 96 100
assignment_stmt (60)
    on left: 38 39 40, on right: 10
assign (61)
    on left: 41, on right: 82
expression (62)
    on left: 42 43 44, on right: 11 25 26 38 39 41 42 43 58 59 60 61
    62 63 64 65 66 67 90 101 108 109
T (63)
    on left: 45 46 47 48, on right: 42 43 44 45 46 47
F (64)
    on left: 49 50 51 52 53 54 55 56 57, on right: 45 46 47 48 50
condition (65)
    on left: 58 59 60 61 62 63 64 65 66 67, on right: 33 49 68 69 79
    82 107
if_stmt (66)
    on left: 68 69, on right: 12
if_block (67)
    on left: 72, on right: 68 69
$@3 (68)
    on left: 70, on right: 72
$@4 (69)
    on left: 71, on right: 72
else_block (70)
    on left: 75, on right: 69
$@5 (71)
    on left: 73, on right: 75
$@6 (72)
    on left: 74, on right: 75
while_stmt (73)
    on left: 79, on right: 13
$@7 (74)
    on left: 76, on right: 79
$@8 (75)
    on left: 77, on right: 79
$@9 (76)
    on left: 78, on right: 79
for_stmt (77)
    on left: 82, on right: 14
$@10 (78)
    on left: 80, on right: 82
$@11 (79)
    on left: 81, on right: 82
switch_stmt (80)
    on left: 84 85, on right: 15
$@12 (81)
    on left: 83, on right: 84
switch_optional_default (82)
    on left: 86 87, on right: 84
case_list (83)
    on left: 88 89, on right: 84 85 89
case_stmt (84)
    on left: 90, on right: 88 89
default_case (85)
    on left: 91, on right: 86
function_decl (86)
    on left: 92 93 94 95, on right: 5 16
function_name (87)
    on left: 96, on right: 92 93
function_name_void (88)
    on left: 97, on right: 94 95
parameter_list (89)
    on left: 98 99, on right: 92 94 99
parameter (90)
    on left: 100, on right: 98 99
return_stmt (91)
    on left: 101 102, on right: 18
do_while_stmt (92)
    on left: 107, on right: 17
$@13 (93)
    on left: 103, on right: 107
$@14 (94)
    on left: 104, on right: 107
$@15 (95)
    on left: 105, on right: 107
$@16 (96)
    on left: 106, on right: 107
argument_list (97)
    on left: 108 109, on right: 52 109


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: $@1 . global_list

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    CONST        shift, and go to state 8
    BOOL_TYPE    shift, and go to state 9
    VOID_TYPE    shift, and go to state 10

    global_list         go to state 11
    global_element      go to state 12
    declaration_stmt    go to state 13
    type                go to state 14
    function_decl       go to state 15
    function_name       go to state 16
    function_name_void  go to state 17


state 3

    0 $accept: program $end .

    $default  accept


state 4

   34 type: INT .

    $default  reduce using rule 34 (type)


state 5

   35 type: FLOAT_TYPE .

    $default  reduce using rule 35 (type)


state 6

   36 type: STRING_TYPE .

    $default  reduce using rule 36 (type)


state 7

   37 type: CHAR_TYPE .

    $default  reduce using rule 37 (type)


state 8

   25 declaration_stmt: CONST . type IDENTIFIER ASSIGN expression SEMICOLON
   30                 | CONST . type error SEMICOLON

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7

    type  go to state 18


state 9

   27 declaration_stmt: BOOL_TYPE . IDENTIFIER SEMICOLON
   28                 | BOOL_TYPE . IDENTIFIER ASSIGN bool_expression SEMICOLON

    IDENTIFIER  shift, and go to state 19


state 10

   97 function_name_void: VOID_TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 20


state 11

    2 program: $@1 global_list .
    4 global_list: global_list . global_element

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    CONST        shift, and go to state 8
    BOOL_TYPE    shift, and go to state 9
    VOID_TYPE    shift, and go to state 10

    $default  reduce using rule 2 (program)

    global_element      go to state 21
    declaration_stmt    go to state 13
    type                go to state 14
    function_decl       go to state 15
    function_name       go to state 16
    function_name_void  go to state 17


state 12

    3 global_list: global_element .

    $default  reduce using rule 3 (global_list)


state 13

    6 global_element: declaration_stmt .

    $default  reduce using rule 6 (global_element)


state 14

   24 declaration_stmt: type . IDENTIFIER SEMICOLON
   26                 | type . IDENTIFIER ASSIGN expression SEMICOLON
   29                 | type . error SEMICOLON
   96 function_name: type . IDENTIFIER

    error       shift, and go to state 22
    IDENTIFIER  shift, and go to state 23


state 15

    5 global_element: function_decl .

    $default  reduce using rule 5 (global_element)


state 16

   92 function_decl: function_name . LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
   93              | function_name . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 24


state 17

   94 function_decl: function_name_void . LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
   95              | function_name_void . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 25


state 18

   25 declaration_stmt: CONST type . IDENTIFIER ASSIGN expression SEMICOLON
   30                 | CONST type . error SEMICOLON

    error       shift, and go to state 26
    IDENTIFIER  shift, and go to state 27


state 19

   27 declaration_stmt: BOOL_TYPE IDENTIFIER . SEMICOLON
   28                 | BOOL_TYPE IDENTIFIER . ASSIGN bool_expression SEMICOLON

    ASSIGN     shift, and go to state 28
    SEMICOLON  shift, and go to state 29


state 20

   97 function_name_void: VOID_TYPE IDENTIFIER .

    $default  reduce using rule 97 (function_name_void)


state 21

    4 global_list: global_list global_element .

    $default  reduce using rule 4 (global_list)


state 22

   29 declaration_stmt: type error . SEMICOLON

    SEMICOLON  shift, and go to state 30


state 23

   24 declaration_stmt: type IDENTIFIER . SEMICOLON
   26                 | type IDENTIFIER . ASSIGN expression SEMICOLON
   96 function_name: type IDENTIFIER .

    ASSIGN     shift, and go to state 31
    SEMICOLON  shift, and go to state 32

    $default  reduce using rule 96 (function_name)


state 24

   92 function_decl: function_name LPAREN . parameter_list RPAREN LBRACE statement_list RBRACE
   93              | function_name LPAREN . RPAREN LBRACE statement_list RBRACE

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    RPAREN       shift, and go to state 33

    type            go to state 34
    parameter_list  go to state 35
    parameter       go to state 36


state 25

   94 function_decl: function_name_void LPAREN . parameter_list RPAREN LBRACE statement_list RBRACE
   95              | function_name_void LPAREN . RPAREN LBRACE statement_list RBRACE

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    RPAREN       shift, and go to state 37

    type            go to state 34
    parameter_list  go to state 38
    parameter       go to state 36


state 26

   30 declaration_stmt: CONST type error . SEMICOLON

    SEMICOLON  shift, and go to state 39


state 27

   25 declaration_stmt: CONST type IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 40


state 28

   28 declaration_stmt: BOOL_TYPE IDENTIFIER ASSIGN . bool_expression SEMICOLON

    TRUE_COND   shift, and go to state 41
    FALSE_COND  shift, and go to state 42
    LPAREN      shift, and go to state 43

    bool_expression  go to state 44


state 29

   27 declaration_stmt: BOOL_TYPE IDENTIFIER SEMICOLON .

    $default  reduce using rule 27 (declaration_stmt)


state 30

   29 declaration_stmt: type error SEMICOLON .

    $default  reduce using rule 29 (declaration_stmt)


state 31

   26 declaration_stmt: type IDENTIFIER ASSIGN . expression SEMICOLON

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 52
    T           go to state 53
    F           go to state 54


state 32

   24 declaration_stmt: type IDENTIFIER SEMICOLON .

    $default  reduce using rule 24 (declaration_stmt)


state 33

   93 function_decl: function_name LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 55


state 34

  100 parameter: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


state 35

   92 function_decl: function_name LPAREN parameter_list . RPAREN LBRACE statement_list RBRACE
   99 parameter_list: parameter_list . COMMA parameter

    RPAREN  shift, and go to state 57
    COMMA   shift, and go to state 58


state 36

   98 parameter_list: parameter .

    $default  reduce using rule 98 (parameter_list)


state 37

   95 function_decl: function_name_void LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 59


state 38

   94 function_decl: function_name_void LPAREN parameter_list . RPAREN LBRACE statement_list RBRACE
   99 parameter_list: parameter_list . COMMA parameter

    RPAREN  shift, and go to state 60
    COMMA   shift, and go to state 58


state 39

   30 declaration_stmt: CONST type error SEMICOLON .

    $default  reduce using rule 30 (declaration_stmt)


state 40

   25 declaration_stmt: CONST type IDENTIFIER ASSIGN . expression SEMICOLON

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 61
    T           go to state 53
    F           go to state 54


state 41

   31 bool_expression: TRUE_COND .

    $default  reduce using rule 31 (bool_expression)


state 42

   32 bool_expression: FALSE_COND .

    $default  reduce using rule 32 (bool_expression)


state 43

   33 bool_expression: LPAREN . condition RPAREN

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 62
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 63
    T           go to state 53
    F           go to state 54
    condition   go to state 64


state 44

   28 declaration_stmt: BOOL_TYPE IDENTIFIER ASSIGN bool_expression . SEMICOLON

    SEMICOLON  shift, and go to state 65


state 45

   56 F: TRUE_COND .

    $default  reduce using rule 56 (F)


state 46

   57 F: FALSE_COND .

    $default  reduce using rule 57 (F)


state 47

   50 F: MINUS . F

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    F  go to state 66


state 48

   49 F: LPAREN . condition RPAREN

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 62
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 63
    T           go to state 53
    F           go to state 54
    condition   go to state 67


state 49

   51 F: IDENTIFIER .
   52  | IDENTIFIER . LPAREN argument_list RPAREN
   53  | IDENTIFIER . LPAREN RPAREN

    LPAREN  shift, and go to state 68

    $default  reduce using rule 51 (F)


state 50

   55 F: NUMBER .

    $default  reduce using rule 55 (F)


state 51

   54 F: FLOAT .

    $default  reduce using rule 54 (F)


state 52

   26 declaration_stmt: type IDENTIFIER ASSIGN expression . SEMICOLON
   42 expression: expression . PLUS T
   43           | expression . MINUS T

    PLUS       shift, and go to state 69
    MINUS      shift, and go to state 70
    SEMICOLON  shift, and go to state 71


state 53

   44 expression: T .
   45 T: T . MULTIPLY F
   46  | T . DIVIDE F
   47  | T . MODULO F

    MULTIPLY  shift, and go to state 72
    DIVIDE    shift, and go to state 73
    MODULO    shift, and go to state 74

    $default  reduce using rule 44 (expression)


state 54

   48 T: F .

    $default  reduce using rule 48 (T)


state 55

   93 function_decl: function_name LPAREN RPAREN LBRACE . statement_list RBRACE

    error        shift, and go to state 75
    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    CONST        shift, and go to state 8
    BOOL_TYPE    shift, and go to state 9
    IF           shift, and go to state 76
    WHILE        shift, and go to state 77
    FOR          shift, and go to state 78
    DO           shift, and go to state 79
    SWITCH       shift, and go to state 80
    BREAK        shift, and go to state 81
    RETURN       shift, and go to state 82
    VOID_TYPE    shift, and go to state 10
    TRUE_COND    shift, and go to state 45
    FALSE_COND   shift, and go to state 46
    MINUS        shift, and go to state 47
    LPAREN       shift, and go to state 48
    LBRACE       shift, and go to state 83
    IDENTIFIER   shift, and go to state 84
    NUMBER       shift, and go to state 50
    FLOAT        shift, and go to state 51

    statement_list      go to state 85
    statement           go to state 86
    break_stmt          go to state 87
    block               go to state 88
    declaration_stmt    go to state 89
    type                go to state 14
    assignment_stmt     go to state 90
    expression          go to state 91
    T                   go to state 53
    F                   go to state 54
    if_stmt             go to state 92
    while_stmt          go to state 93
    for_stmt            go to state 94
    switch_stmt         go to state 95
    function_decl       go to state 96
    function_name       go to state 16
    function_name_void  go to state 17
    return_stmt         go to state 97
    do_while_stmt       go to state 98


state 56

  100 parameter: type IDENTIFIER .

    $default  reduce using rule 100 (parameter)


state 57

   92 function_decl: function_name LPAREN parameter_list RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 99


state 58

   99 parameter_list: parameter_list COMMA . parameter

    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7

    type       go to state 34
    parameter  go to state 100


state 59

   95 function_decl: function_name_void LPAREN RPAREN LBRACE . statement_list RBRACE

    error        shift, and go to state 75
    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    CONST        shift, and go to state 8
    BOOL_TYPE    shift, and go to state 9
    IF           shift, and go to state 76
    WHILE        shift, and go to state 77
    FOR          shift, and go to state 78
    DO           shift, and go to state 79
    SWITCH       shift, and go to state 80
    BREAK        shift, and go to state 81
    RETURN       shift, and go to state 82
    VOID_TYPE    shift, and go to state 10
    TRUE_COND    shift, and go to state 45
    FALSE_COND   shift, and go to state 46
    MINUS        shift, and go to state 47
    LPAREN       shift, and go to state 48
    LBRACE       shift, and go to state 83
    IDENTIFIER   shift, and go to state 84
    NUMBER       shift, and go to state 50
    FLOAT        shift, and go to state 51

    statement_list      go to state 101
    statement           go to state 86
    break_stmt          go to state 87
    block               go to state 88
    declaration_stmt    go to state 89
    type                go to state 14
    assignment_stmt     go to state 90
    expression          go to state 91
    T                   go to state 53
    F                   go to state 54
    if_stmt             go to state 92
    while_stmt          go to state 93
    for_stmt            go to state 94
    switch_stmt         go to state 95
    function_decl       go to state 96
    function_name       go to state 16
    function_name_void  go to state 17
    return_stmt         go to state 97
    do_while_stmt       go to state 98


state 60

   94 function_decl: function_name_void LPAREN parameter_list RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 102


state 61

   25 declaration_stmt: CONST type IDENTIFIER ASSIGN expression . SEMICOLON
   42 expression: expression . PLUS T
   43           | expression . MINUS T

    PLUS       shift, and go to state 69
    MINUS      shift, and go to state 70
    SEMICOLON  shift, and go to state 103


state 62

   66 condition: NOT . expression

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 104
    T           go to state 53
    F           go to state 54


state 63

   42 expression: expression . PLUS T
   43           | expression . MINUS T
   58 condition: expression . EQUAL expression
   59          | expression . NOT_EQUAL expression
   60          | expression . LESS_THAN expression
   61          | expression . GREATER_THAN expression
   62          | expression . LESS_EQUAL expression
   63          | expression . GREATER_EQUAL expression
   64          | expression . AND expression
   65          | expression . OR expression
   67          | expression .

    PLUS           shift, and go to state 69
    MINUS          shift, and go to state 70
    EQUAL          shift, and go to state 105
    NOT_EQUAL      shift, and go to state 106
    LESS_THAN      shift, and go to state 107
    GREATER_THAN   shift, and go to state 108
    LESS_EQUAL     shift, and go to state 109
    GREATER_EQUAL  shift, and go to state 110
    AND            shift, and go to state 111
    OR             shift, and go to state 112

    $default  reduce using rule 67 (condition)


state 64

   33 bool_expression: LPAREN condition . RPAREN

    RPAREN  shift, and go to state 113


state 65

   28 declaration_stmt: BOOL_TYPE IDENTIFIER ASSIGN bool_expression SEMICOLON .

    $default  reduce using rule 28 (declaration_stmt)


state 66

   50 F: MINUS F .

    $default  reduce using rule 50 (F)


state 67

   49 F: LPAREN condition . RPAREN

    RPAREN  shift, and go to state 114


state 68

   52 F: IDENTIFIER LPAREN . argument_list RPAREN
   53  | IDENTIFIER LPAREN . RPAREN

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    RPAREN      shift, and go to state 115
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression     go to state 116
    T              go to state 53
    F              go to state 54
    argument_list  go to state 117


state 69

   42 expression: expression PLUS . T

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    T  go to state 118
    F  go to state 54


state 70

   43 expression: expression MINUS . T

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    T  go to state 119
    F  go to state 54


state 71

   26 declaration_stmt: type IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 26 (declaration_stmt)


state 72

   45 T: T MULTIPLY . F

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    F  go to state 120


state 73

   46 T: T DIVIDE . F

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    F  go to state 121


state 74

   47 T: T MODULO . F

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    F  go to state 122


state 75

   39 assignment_stmt: error . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 123


state 76

   68 if_stmt: IF . LPAREN condition RPAREN if_block
   69        | IF . LPAREN condition RPAREN if_block ELSE else_block

    LPAREN  shift, and go to state 124


state 77

   79 while_stmt: WHILE . LPAREN condition RPAREN $@7 LBRACE $@8 statement_list $@9 RBRACE

    LPAREN  shift, and go to state 125


state 78

   82 for_stmt: FOR . $@10 LPAREN declaration_stmt condition SEMICOLON assign RPAREN $@11 LBRACE statement_list RBRACE

    $default  reduce using rule 80 ($@10)

    $@10  go to state 126


state 79

  107 do_while_stmt: DO . $@13 LBRACE $@14 statement_list $@15 RBRACE $@16 WHILE LPAREN condition RPAREN SEMICOLON

    $default  reduce using rule 103 ($@13)

    $@13  go to state 127


state 80

   84 switch_stmt: SWITCH . LPAREN IDENTIFIER RPAREN $@12 LBRACE case_list switch_optional_default RBRACE
   85            | SWITCH . error RPAREN LBRACE case_list RBRACE

    error   shift, and go to state 128
    LPAREN  shift, and go to state 129


state 81

   21 break_stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 130


state 82

  101 return_stmt: RETURN . expression SEMICOLON
  102            | RETURN . SEMICOLON

    TRUE_COND   shift, and go to state 45
    FALSE_COND  shift, and go to state 46
    MINUS       shift, and go to state 47
    LPAREN      shift, and go to state 48
    SEMICOLON   shift, and go to state 131
    IDENTIFIER  shift, and go to state 49
    NUMBER      shift, and go to state 50
    FLOAT       shift, and go to state 51

    expression  go to state 132
    T           go to state 53
    F           go to state 54


state 83

   23 block: LBRACE . $@2 statement_list RBRACE

    $default  reduce using rule 22 ($@2)

    $@2  go to state 133


state 84

   38 assignment_stmt: IDENTIFIER . ASSIGN expression SEMICOLON
   40                | IDENTIFIER . ASSIGN error SEMICOLON
   51 F: IDENTIFIER .
   52  | IDENTIFIER . LPAREN argument_list RPAREN
   53  | IDENTIFIER . LPAREN RPAREN

    ASSIGN  shift, and go to state 134
    LPAREN  shift, and go to state 68

    $default  reduce using rule 51 (F)


state 85

    8 statement_list: statement_list . statement
   93 function_decl: function_name LPAREN RPAREN LBRACE statement_list . RBRACE

    error        shift, and go to state 75
    INT          shift, and go to state 4
    FLOAT_TYPE   shift, and go to state 5
    STRING_TYPE  shift, and go to state 6
    CHAR_TYPE    shift, and go to state 7
    CONST        shift, and go to state 8
    BOOL_TYPE    shift, and go to state 9
    IF           shift, and go to state 76
    WHILE        shift, and go to state 77
    FOR          shift, and go to state 78
    DO           shift, and go to state 79
    SWITCH       shift, and go to state 80
    BREAK        shift, and go to state 81
    RETURN       shift, and go to state 82
    VOID_TYPE    shift, and go to state 10
    TRUE_COND    shift, and go to state 45
    FALSE_COND   shift, and go to state 46
    MINUS        shift, and go to state 47
    LPAREN       shift, and go to state 48
    LBRACE       shift, and go to state 83
    RBRACE       shift, and go to state 135
    IDENTIFIER   shift, and go to state 84
    NUMBER       shift, and go to state 50
    FLOAT        shift, and go to state 51

    statement           go to state 136
    break_stmt          go to state 87
    block               go to state 88
    declaration_stmt    go to state 89
    type                go to state 14
    assignment_stmt     go to state 90
    expression          go to state 91
    T                   go to state 53
    F                   go to state 54
    if_stmt             go to state 92
    while_stmt          go to state 93
    for_stmt            go to state 94
    switch_stmt         go to state 95
    function_decl       go to state 96
    function_name       go to state 16
    function_name_void  go to state 17
    return_stmt         go to state 97
    do_while_stmt       go to state 98


state 86

    7 statement_list: statement .

    $default  reduce using rule 7 (statement_list)


state 87

   19 statement: break_stmt .

    $default  reduce using rule 19 (statement)


state 88

   20 statement: block .

    $default  reduce using rule 20 (statement)


state 89

    9 statement: declaration_stmt .

    $default  reduce using rule 9 (statement)


state 90

   10 statement: assignment_stmt .

    $default  reduce using rule 10 (statement)


state 91

   11 statement: expression . SEMICOLON
   42 expression: expression . PLUS T
   43           | expression . MINUS T

    PLUS       shift, and go to state 69
    MINUS      shift, and go to state 70
    SEMICOLON  shift, and go to state 137


state 92

   12 statement: if_stmt .

    $default  reduce using rule 12 (statement)


state 93

   13 statement: while_stmt .

    $default  reduce using rule 13 (statement)


state 94

   14 statement: for_stmt .

    $default  reduce using rule 14 (statement)


state 95

   15 statement: switch_stmt .

    $default  reduce using rule 15 (statement)


state 96

   16 statement: function_decl .

    $default  reduce using rule 16 (statement)


state 97

   18 statement: return_stmt .

    $default  reduce using rule 18 (statement)


state 98

   17 statement: do_while_stmt .

    $default  reduce using rule 17 (statement)


state 99

   92 function_decl: function_name LPAREN parameter_list RPAREN LBRACE . statement_list RBRACE
